--- a/Grocery.App/Views/GroceryListsView.xaml
+++ b/Grocery.App/Views/GroceryListsView.xaml
@@ -12,6 +12,9 @@
         </Grid>
     </Shell.TitleView>
 
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Text="{Binding CurrentClient.Name}" Command="{Binding ShowBoughtProductsCommand}" />
+	</ContentPage.ToolbarItems>
     <Border Stroke="#C49B33"
         StrokeThickness="4"
         Padding="10"
@@ -21,10 +24,9 @@
                         SelectionMode="Single"
                         SelectionChangedCommand="{Binding SelectGroceryListCommand}"
                         SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
-            <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
-            </CollectionView.ItemsLayout>
-
+			<CollectionView.ItemsLayout>
+				<LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
+			</CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="m:GroceryList">
                     <Grid>
